unpackaged/main/default/objects/Room_Block_Selection__c/Room_Block_Selection__c.object-meta.xml
<CustomObject>
    <description>The customer&#39;s room selection (ex: Joe Martin from Martin GMC selected 5 Queen rooms, 3 King rooms, and 1 Efficiency room for this engagement)</description>
    <label>Room Block Selection</label>
    <nameField>
        <displayFormat>RBS-{000000}</displayFormat>
        <label>Room Block Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Block Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>