unpackaged/main/default/objects/Room_Block_Selection__c/fields/Planned_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Planned_Arrival__c</fullName>
    <label>Planned Arrival</label>
    <type>Date</type>
</CustomField>