unpackaged/main/default/objects/Room_Block_Selection__c/fields/Room_Block_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Room_Block_Survey_Response__c</fullName>
    <description>The parent Room Block Survey Response from the customer.</description>
    <label>Room Block Survey Response</label>
    <referenceTo>Room_Block_Survey_Response__c</referenceTo>
    <relationshipLabel>Room Block Selections</relationshipLabel>
    <relationshipName>Room_Block_Selections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>