unpackaged/main/default/objects/Room_Block_Selection__c/fields/Room_Count__c.field-meta.xml
<CustomField>
    <fullName>Room_Count__c</fullName>
    <description>The number of rooms needed for this room type</description>
    <label>Room Count</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>